--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.novoda:bintray-release:0.9.1'
+        // gradle插件版本不能高于 4.0 对应gradle-wrapper.properties文件中版本定位到 5.4.1
+        classpath 'com.novoda:bintray-release:0.9.2'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -31,4 +32,14 @@ task clean(type: Delete) {
 tasks.withType(Javadoc) {
     options.addStringOption('Xdoclint:none', '-quiet')
     options.addStringOption('encoding', 'UTF-8')
+}
+
+def LocalBintrayKey() {
+    Properties properties = new Properties()
+    def file = rootProject.file('local.properties')
+    if (file.exists()) {
+        InputStream inputStream = file.newDataInputStream()
+        properties.load(inputStream)
+        properties.getProperty('bintrayKey')
+    }
 }
