--- a/dqpay/build.gradle
+++ b/dqpay/build.gradle
@@ -11,7 +11,7 @@ publish {
     publishVersion = '1.0.0'
     desc = 'nothing'
     bintrayUser = 'dashingqi'
-    bintrayKey = LocalDqPayBintrayKey()
+    bintrayKey = LocalBintrayKey()
     dryRun = false
 }
 
