[优化支付宝支付]

--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,13 @@ buildscript {
 }
 
 allprojects {
+    // 添加下面的内容
     repositories {
         google()
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
