--- a/dqpay/build.gradle
+++ b/dqpay/build.gradle
@@ -8,8 +8,8 @@ publish {
     userOrg = 'dashingqi'      // bintray注册的用户名
     groupId = 'com.dashingqi'
     artifactId = 'dqpay' // bintray创建的package
-    publishVersion = '1.0.0'
-    desc = 'nothing'
+    publishVersion = '1.0.1'
+    desc = 'update'
     bintrayUser = 'dashingqi'
     bintrayKey = LocalBintrayKey()
     dryRun = false
