--- a/alipay/build.gradle
+++ b/alipay/build.gradle
@@ -1,6 +1,19 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.novoda.bintray-release'
+
+publish {
+    repoName = 'pay' //仓库名字
+    userOrg = 'dashingqi'      // bintray注册的用户名
+    groupId = 'com.dashingqi'
+    artifactId = 'alipay' // bintray创建的package 仓库下面对应的package名字
+    publishVersion = '0.9.5'
+    desc = 'beta version'
+    bintrayUser = 'dashingqi'
+    bintrayKey = LocalBintrayKey()
+    dryRun = false
+}
 
 android {
     compileSdkVersion 29
@@ -25,6 +38,8 @@ android {
 }
 
 dependencies {
+    // 添加下面的内容
+    compile (name: 'alipaySdk-15.7.9-20200727142846', ext: 'aar')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
@@ -32,6 +47,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.dashingqi:dqpay:1.0.0'
+    implementation 'com.dashingqi:dqpay:1.0.1'
 
 }
