--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ allprojects {
         flatDir {
             dirs 'libs'
         }
+        maven {
+            url  "https://dl.bintray.com/dashingqi/pay"
+        }
     }
 }
 
