--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories {
+        mavenLocal()
+        maven {
+            url  "https://dl.bintray.com/dashingqi/pay"
+        }
+    }
+
+    //解决 implementation project(":alipay") 此种形式引入module（alipay）
+//    repositories {
+//        flatDir {
+//            dirs project(':alipay').file('libs')
+//        }
+//    }
 }
 
 dependencies {
@@ -33,8 +47,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    api project(":dqpay")
-    api project(":wxpay")
-//    api project(":alipay")
+    implementation 'com.dashingqi:dqpay:1.0.1'
+    implementation 'com.dashingqi:wxpay:0.9.6'
+    implementation 'com.dashingqi:alipay:0.9.8'
 
 }
