--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,19 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://dl.bintray.com/dashingqi/pay"
+        }
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // gradle插件版本不能高于 4.0 对应gradle-wrapper.properties文件中版本定位到 5.4.1
         classpath 'com.novoda:bintray-release:0.9.2'
+        // https://github.com/kezong/fat-aar-android/blob/master/README_CN.md
+        // fat-aar提供了将library和它依赖的module一起打包成一个完整aar的解决方案
+        classpath 'com.kezong:fat-aar:1.2.15'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,12 +29,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        flatDir {
-            dirs 'libs'
-        }
-        maven {
-            url  "https://dl.bintray.com/dashingqi/pay"
-        }
+
     }
 }
 
