--- a/alipay/build.gradle
+++ b/alipay/build.gradle
@@ -9,7 +9,7 @@ publish {
     userOrg = 'dashingqi'      // bintray注册的用户名
     groupId = 'com.dashingqi'
     artifactId = 'alipay' // bintray创建的package 仓库下面对应的package名字
-    publishVersion = '0.9.8'
+    publishVersion = '0.9.9'
     desc = 'beta version'
     bintrayUser = 'dashingqi'
     bintrayKey = LocalBintrayKey()
@@ -47,14 +47,14 @@ android {
 dependencies {
     // 添加下面的内容
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    embed (name:'alipaySdk-15.7.9-20200727142846',ext:'aar')
+    embed(name: 'alipaySdk-15.7.9-20200727142846', ext: 'aar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.dashingqi:dqpay:1.0.1'
+    api 'com.dashingqi:dqpay:1.0.1'
 
 
 }
