--- a/dqpay/build.gradle
+++ b/dqpay/build.gradle
@@ -1,19 +1,13 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.novoda.bintray-release'
-
-publish {
-    repoName = 'pay'
-    userOrg = 'dashingqi'      // bintray注册的用户名
-    groupId = 'com.dashingqi'
-    artifactId = 'dqpay' // bintray创建的package
-    publishVersion = '0.9.9.3'
-    desc = 'update'
-    bintrayUser = 'dashingqi'
-    bintrayKey = LocalBintrayKey()
-    dryRun = false
-}
+ext
+        {
+            PUBLISH_GROUP_ID = "io.github.dashingqi"        //项目包名
+            PUBLISH_ARTIFACT_ID = 'pay'            //项目名
+            PUBLISH_VERSION = '0.0.1'
+        }
+apply from: "publish-mavencentral.gradle"
 
 android {
     compileSdkVersion 29
