--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,20 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-    repositories {
-        mavenLocal()
-        maven {
-            url  "https://dl.bintray.com/dashingqi/pay"
-        }
-    }
-
-    //解决 implementation project(":alipay") 此种形式引入module（alipay）
-//    repositories {
-//        flatDir {
-//            dirs project(':alipay').file('libs')
-//        }
-//    }
 }
 
 dependencies {
@@ -47,7 +33,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.dashingqi:wxpay:0.9.9.3'
-    implementation 'com.dashingqi:alipay:0.9.9.3'
+    implementation 'io.github.dashingqi:pay:0.0.2'
 
 }
