--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.5.10"
     repositories {
+        mavenLocal()
         mavenCentral()
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // https://github.com/kezong/fat-aar-android/blob/master/README_CN.md
         // fat-aar提供了将library和它依赖的module一起打包成一个完整aar的解决方案
@@ -22,6 +23,7 @@ buildscript {
 allprojects {
     // 添加下面的内容
     repositories {
+        mavenLocal()
         mavenCentral()
         google()
         jcenter()
