--- a/wxpay/build.gradle
+++ b/wxpay/build.gradle
@@ -5,7 +5,7 @@ ext
         {
             PUBLISH_GROUP_ID = "io.github.dashingqi"        //项目包名
             PUBLISH_ARTIFACT_ID = 'wxpay'            //项目名
-            PUBLISH_VERSION = '0.0.1'
+            PUBLISH_VERSION = '0.0.2'
         }
 apply from: "publish-mavencentral.gradle"
 
@@ -33,13 +33,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-
+    api 'io.github.dashingqi:pay:0.0.3'
 }
