--- a/wxpay/build.gradle
+++ b/wxpay/build.gradle
@@ -34,6 +34,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.4.0'
     api 'io.github.dashingqi:pay:0.0.3'
 }
